@@ -46,10 +46,10 @@ from dataservice.DataService     import datasetCompleted,updateFileStatusInDisp
 allowedMethods += ['datasetCompleted','updateFileStatusInDisp']
 
 from jobdispatcher.JobDispatcher import getJob,updateJob,getStatus,genPilotToken,\
-    getEventRanges,updateEventRange,getKeyPair,updateEventRanges
+    getEventRanges,updateEventRange,getKeyPair,updateEventRanges,getDNsForS3
 allowedMethods += ['getJob','updateJob','getStatus','genPilotToken',
                    'getEventRanges','updateEventRange','getKeyPair',
-                   'updateEventRanges']
+                   'updateEventRanges','getDNsForS3']
 
 from userinterface.UserIF        import submitJobs,getJobStatus,queryPandaIDs,killJobs,reassignJobs,\
      getJobStatistics,getJobStatisticsPerSite,resubmitJobs,queryLastFilesInDataset,getPandaIDsSite,\
