@@ -1,6 +1,7 @@
 Release Notes
 
 * 1/26/2016
+  * added getDNsForS3
   * added protection not to change failed jobs to holding
 
 * 1/25/2016
